# Cryptra-Collector

./: .env.templete  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: cd.yml  ci.yml  deploy.yml  terraform.yml
src/collector/: __main__.py
src/libs/aws/: __init__.py  authorization.py  aws_client.py  kinesis.py
src/libs/aws/serviceis/: __init__.py  kinesis.py
src/libs/exchange/: __init__.py  exchange.py
src/libs/exchange/models/: __init__.py  binance.py  bitflyer.py  bybit.py
src/libs/utils/: __init__.py  candle.py  candle_generator.py  display.py  health_check.py  limited_size_default_dict.py  logger.py  ws_health_check.py
terraform/: ecr.tf  ecs.tf  eks.tf  iam.tf  kinesis.tf  locals.tf  main.tf  outputs.tf  variable.tf
terraform/modules/ecr/: main.tf
terraform/modules/iam/: main.tf  outputs.tf  policy.json
tests/: test_candle.py  test_candle_generator.py  test_limited_size_default_dict.py
