[tool.poetry]
name = "Crypta-Collector"
version = "0.1.0"
description = ""
authors = ["k6s"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pybotters = "^1.3.0"
boto3 = "^1.34.140"
aiohttp = "^3.9.5"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
